--- a/configuration/partials/certificate/filename.hbs
+++ b/configuration/partials/certificate/filename.hbs
@@ -13,7 +13,7 @@
 {{~/compare ~}}
 {{~/compare ~}}
 {{~else~}}
-{{~#compare (sumArray (pluck @root.data.tasksInfo "hours_verified")) ">=" hours ~}}
+{{~#ifAll (compare (sumArray (pluck @root.data.tasksInfo "hours_verified")) ">=" hours) (compare (sumArray (pluck @root.data.tasksInfo "hours_verified")) "<" next_award_hours) }}
 {{~#unless (compare hours 1) ~}}
 {{~#unless (compare @root.data.accountInfo.hours_verify_award ">" hours) ~}}
 {{~#compare ../type "group" ~}}
@@ -23,7 +23,7 @@
 {{~/compare ~}}
 {{~/unless ~}}
 {{~/unless ~}}
-{{~/compare ~}}
+{{~/ifAll ~}}
 {{~/ifAll ~}}
 {{~/each ~}}
 {{~else~}}
