candidate fix to grey out badness

--- a/configuration/templates/account/account.hbs
+++ b/configuration/templates/account/account.hbs
@@ -3,7 +3,7 @@
     <div class="column col-9 col-xl-12">
       <h2>Details</h2>
 
-      <form id="user-details-form" action="/update-account-details" method="POST" data-component="TasksTrigger" data-TasksTrigger='{
+      <form id="user-details-form" action="/update-account-details" method="POST" class="details-form" data-component="TasksTrigger" data-TasksTrigger='{
         change: { tasks: [ "validate-details-form" ] },
         keyup: { tasks: [ "validate-details-form" ] },
         load: { tasks: [ "validate-details-form" ] },
