--- a/configuration/templates/account/auth/sign-up-admin.hbs
+++ b/configuration/templates/account/auth/sign-up-admin.hbs
@@ -1,4 +1,4 @@
-<form id="sign-up-form" method="POST" class="container form authentication-form" data-component="TasksTrigger" data-TasksTrigger="sign-up">
+<form id="sign-up-form" method="POST" class="container form authentication-form details-form" data-component="TasksTrigger" data-TasksTrigger="sign-up">
   <!-- <h2 class="x-padding">
     Group administrator sign up
   </h2> -->
