--- a/configuration/templates/account/auth/sign-up.hbs
+++ b/configuration/templates/account/auth/sign-up.hbs
@@ -1,4 +1,4 @@
-<form id="sign-up-form" method="POST" class="container form authentication-form" data-component="TasksTrigger" data-TasksTrigger="sign-up">
+<form id="sign-up-form" method="POST" class="container form authentication-form details-form" data-component="TasksTrigger" data-TasksTrigger="sign-up">
   <div class="l-margin r-margin">
     <div class="bg-error s-rounded x-padding v-margin" id="sign-up-message">
       <span id="form-message"></span>
