--- a/src/main.scss
+++ b/src/main.scss
@@ -541,7 +541,7 @@ header,
     }
     .active {
       color: $primary-color;
-      font-weight: $heading-font-weight;
+      font-weight: $link-font-weight;
       .fal {
         font-weight: 500;
       }
